# Sunshine

./: .gitmodules
.github/workflows/: CI.yml
cmake/packaging/: linux.cmake
docs/source/: conf.py
docs/source/building/: windows.rst
docs/source/contributing/: testing.rst
tests/: CMakeLists.txt  conftest.cpp  main.cpp  test_file_handler.cpp  test_main.cpp  test_sample.cpp
tests/ci/: test_docs.cpp
tests/unit/: test_file_handler.cpp
